# aws-mlops-handson

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  analyse.ipynb  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-mlops-handson.yml  test-mlops-handson.yml
infra/: main.tf  terraform.tfvars
infra/modules/alb/: main.tf  output.tf  variables.tf
infra/modules/ecr/: main.tf  output.tf
infra/modules/ecs/: main.tf  output.tf  variables.tf
infra/modules/iam/: main.tf  output.tf
infra/modules/network/: main.tf  output.tf  variables.tf
infra/modules/s3/: main.tf  output.tf  variables.tf
infra/modules/stepfunctions/: main.tf  variables.tf
ml/: main.py
ml/aws/: controller.py
ml/dataset/: __init__.py  data_loader.py  data_model.py
ml/logger/: logging_utils.py
ml/model/: __init__.py  base_model.py  models.py  sgd_classifier_ctr_model.py  sgd_classifier_ctr_optuna_model.py
ml/path/: path_utils.py
ml/preprocessor/: __init__.py  base_preprocessor.py  ctr_model_preprocessor.py
predictor/: app.py  request.py  routers.py  setup.py
tests/ml/aws/: test_controller.py
tests/ml/dataset/: test_data_loader.py  test_data_model.py
tests/ml/logger/: test_logging_util.py
tests/ml/model/: test_base_model.py  test_models.py  test_sgd_classifier_ctr_model.py  test_sgd_classifier_ctr_optuna_model.py
tests/ml/path/: test_path_utils.py
tests/ml/preprocessor/: test_base_preprocessor.py  test_ctr_model_preprocessor.py
tests/predictor/: test_request.py  test_routers.py  test_setup.py
(+3 files in other folders)
